src/main/java/com/example/restaurant/errors/details/InvalidFieldErrorDetails.java
package com.example.restaurant.errors.details;

public record InvalidFieldErrorDetails(
        String[] fields
) {
}
